--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/clerk-expo": "^0.20.5",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
+    "@react-navigation/stack": "^6.3.23",
     "@types/react": "~18.2.45",
     "expo": "^50.0.7",
     "expo-font": "~11.10.3",
